# timeseries-api

./: .dockerignore  .gitignore  ADR.md  Dockerfile  Dockerfile.mcp  Makefile  README.md  cli_pipeline.py  docker-compose.yml  fastapi_pipeline.py  makefile  mcp_server.py  pipeline.md  pyproject.toml  requirements-minimal.txt  requirements.txt  run_pipeline.py  save_openapi_json.py  smoketest.sh  smoketest_results.txt  yfinancetest.py
.github/workflows/: cicd.yml
api/: __init__.py  app.py  cli_pipeline.py  cli_pipeline_orig.py  database.py  fastapi_pipeline.py  fastapi_pipeline_orig.py  openapi.json  schema.graphql
api/database/: schema.sql
api/gql/: __init__.py  resolvers.py  types.py
api/middleware/: __init__.py  rate_limiting.py
api/models/: __init__.py  input.py  response.py
api/routers/: __init__.py  data.py  models.py  pipeline.py  spillover.py
api/services/: __init__.py  data_service.py  interpretations.py  market_data_service.py  models_service.py  spillover_service.py
api/utils/: __init__.py  json_handling.py
archive/docs/: content.html  content.md  market_risk.txt
config/: config.yml  config_nested.yml
outputs/20250523_223107/: 003--pipeline#167--var=api_returns_data.csv  007--pipeline#275--var=api_garch_results.json  (+10 more)
src/: configurator.py
tests/: test_chronicler.py  test_configurator.py  test_fastapi_pipeline.py  test_response_models.py  test_yfinance_fetch.py
utilities/: chronicler.py  configurator.py  export_util.py  interpretation.py  stooq_test.py  yfinance_ratelimit_test.py  yfinance_test.py
